# assisted-installer-howto

./: .gitignore  .pre-commit-config.yaml  README.md  ocpinstaller.py  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
ocpinstaller/: ocpinstaller.py
resources/configs/: install-config-patch-3masters  install-config-patch-sno  paramfile-3masters.yaml  paramfile-sno.yaml
resources/manifests/: 99-disconnected-internal-icsp.yaml  99-image-policy-0.yaml  99-image-policy-1.yaml  99-image-policy-2.yaml  99-openshift-master-chrony.yaml  99-openshift-worker-chrony.yaml  99-redhat-operator-index-catalog.yaml  99-redhat-operators-catalog.yaml
