[metadata]
name = ocpinstaller
summary = Kubernetes integration with OpenStack networking
description_file =
    README.md
author = Victor Hernando
classifier =
    Environment :: Kubernetes
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[entry_points]
console_scripts =
    ocpinstaller = ocpinstaller.ocpinstaller:main
